// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton/> Render <Skeleton/> 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-label="loader"
    role="status"
  />
</DocumentFragment>
`;

exports[`<SkeletonEnhanced/> Render <SkeletonEnhanced/> 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-label="loader"
    class="af-skeleton"
    role="status"
  />
</DocumentFragment>
`;
